integrated search with slickgrid and created seperate views for student details and for adding student review

--- a/review_monitor.html
+++ b/review_monitor.html
@@ -63,7 +63,7 @@
             </div>
             <div class="row">
               <div class="center">
-                <a class="waves-effect waves-light btn">Search</a>
+                <a id="searchBtn" class="waves-effect waves-light btn">Search</a>
               </div>
             </div>
           </form>
@@ -119,336 +119,6 @@
         
         <div id="myGrid" style="margin-left: 0.5%; margin-top: 10px; width: 99%; height:450px;"></div>
 
-        <!-- Modal Structure -->
-        <div id="view-student-info" class="modal modal-fixed-footer">
-          <div class="modal-content">
-            <h4>Student Information</h4>
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s3">
-                  <input id="ln" type="text" disabled>
-                  <label for="ln">Last Name</label>
-                </div>
-                <div class="input-field col s3">
-                  <input id="fn" type="text" class="validate"  disabled>
-                  <label for="fn">First Name</label>
-                </div>
-                <div class="input-field col s2">
-                  <input id="uin_" type="text" class="validate"  disabled>
-                  <label for="uin_">UIN</label>
-                </div>
-                <div class="input-field col s4">
-                  <input id="email" type="text" class="validate" value="sumedhpendurkar@tamu.edu" disabled>
-                  <label for="email">Email</label>
-                </div>
-              </div>
-              <div class='row'>
-                <div class="input-field col s3">
-                  <select id = "start-semester" name="start-semester"  disabled>
-                      <option value="" disabled selected>Choose your option</option>
-                  </select>
-                  <label for="uin"> Start Semester </label>
-                </div>
-                <div class="input-field col s2 ">
-                  <select id="qual" class="validate"  disabled>
-                    <option value="pass" selected>Pass</option>
-                    <option value="fail" selected>Fail</option>
-                  </select>
-                  <label for="qual_exam">Qual Exam</label>
-                </div>
-                <div class="input-field col s2">
-                  <select id="attempts" class="validate"  disabled>
-                    <option value="1" selected>1</option>
-                    <option value="2" selected>2</option>
-                    <option value="3" selected>3</option>
-                  </select>
-                  <label for="attempts">Attempts completed</label>
-                </div>
-
-              </div>
-
-              <div class="row">
-                <div class="input-field col s3">
-                  <select id="advisor" class="validate" disabled>
-                    <option value="null" disabled selected>choose advisor</option>
-                  </select>
-                  <label for="advisor">Advisor</label>
-                </div>
-                <div class="input-field col s3">
-                  <select id="co-advisor" class="validate" disabled>
-                    <option value="null" disabled selected>Choose co-advisor</option>
-                    <option value="none">no co-advisor</option>
-                  </select>
-                  <label for="advisor">Co-Advisor</label>
-                </div>
-                <div class="input-field col s2">
-                  <input id="rating" type="text" class="validate"  disabled>
-                  <label for="rating">Rating</label>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="input-field col s2">
-                  <select id="degree-plan" class="validate" disabled>
-                    <option value="yes" selected>Yes</option>
-                    <option value="no" selected>No</option>
-                  </select>
-                  <label for="dpf">Degree Plan Filed?</label>
-                </div>
-                <div class="input-field col s2">
-                  <input id="prelim-date" type="text" class="datepicker"  disabled>
-                  <label for="prelim-date">Prelim Date</label>
-                </div>
-                <div class="input-field col s2" >
-                <input type="text" class="datepicker" id="proposal-date" disabled>
-                  <label for="proposal-date">Proposal Date</label>
-                </div>
-                <div class="input-field col s2" disabled>
-                  <input type="text" class="datepicker" id="defense-date" disabled>
-                  <label for="defense-date">Final Defense Date</label>
-                </div>
-              </div>
-
-            <div class="row">
-              <button class="btn waves-effect waves-light" type="submit" name="action"> View CV
-              </button>
-              <button class="btn waves-effect waves-light" type="submit" name="action"> View Student Report
-              </button>
-              <button class="btn waves-effect waves-light" type="submit" name="action"> View Improvement Plan
-              </button>
-            </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Okay</a>
-          </div>
-        </div>
-        
-
-        <!-- Modal Structure -->
-        <div id="upload-review" class="modal modal-fixed-footer">
-          <div class="modal-content">
-            <h4>Review for Sumedh Dattaguru</h4>
-            <form class="col s12">
-              <table class="highlight centered">
-
-                <thead>
-                <tr>
-                    <th>Review Year</th>
-                    <th>Open Date</th>
-                    <th>Review Deadline</th>
-                </tr>
-              </thead>
-
-                <tbody>
-                <tr>
-                  <td>2014</td>
-                  <td>-</td>
-                  <td>-</td>
-                </tr>
-                <tr>
-                  <td>2015</td>
-                  <td>-</td>
-                  <td>-</td>
-                </tr>
-                <tr>
-                  <td>2016</td>
-                  <td>-</td>
-                  <td>-</td>
-                </tr>
-                <tr>
-                  <td>2017</td>
-                  <td>-</td>
-                  <td>-</td>
-                </tr>
-              </tbody>
-
-              </table>
-
-              <br>
-
-              <div class="row">
-
-                <div class="col s4">
-                  <p align="center">
-                    <label>
-                      <input type="checkbox" checked="checked" disabled="disabled" />
-                      <span>Decision Letter</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="center">
-                    <label>
-                      <input type="checkbox" disabled="disabled" />
-                      <span>Curriculum Vitae</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="center">
-                    <label>
-                      <input type="checkbox" disabled="disabled" />
-                      <span>Student Report</span>
-                    </label>
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="row">
-
-                <div class="col s6">
-                  <h6>Comments For Student</h6>
-                  <textarea id="textarea1" class="materialize-textarea"></textarea>
-                </div>
-
-                <div class="col s6">
-                  <h6>Comments For Faculty</h6>
-                  <textarea id="textarea2" class="materialize-textarea"></textarea>
-                </div>
-
-              </div>
-
-              <div class="row">
-
-                <div class="input-field col s12">
-                  <select>
-                    <option disabled selected>Choose your option</option>
-                    <option>Not Rated (X)</option>
-                    <option >Unsatisfactory (U)</option>
-                    <option >Needs Improvement (N)</option>
-                    <option >Unsatisfactory (S)</option>
-                  </select>
-                  <label>Rating</label>
-                </div>
-
-              </div>
-
-              <div class="row">
-                Notes (select all that apply)
-              </div>
-              <div class="row">
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Needs to improve grade</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>No student report available</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox" checked="false"/>
-                      <span>Misconduct</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Needs to pass qualifer exam</span>
-                    </label>
-                  </p>
-                </div>
-
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Needs to find advisor</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Need to file degree plan</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Need to do prelim</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Need to do submit proposal</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Need to do finish soon</span>
-                    </label>
-                  </p>
-                </div>
-
-                <div class="col s4">
-                  <p align="left">
-                    <label>
-                      <input type="checkbox"/>
-                      <span>Need to do file degree plan</span>
-                    </label>
-                  </p>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
-          </div>
-        </div>
-
-        <div id="create-review-year" class="modal modal-fisxed-footer">
-          <div class="modal-content">
-            <h4>Create a Review Year</h4>
-            <div class="row">
-
-            <div class="input-field col s2" align="center">
-              <select id="year2" align="center">
-                <option value="" disabled selected>2019-2020</option>
-              </select>
-              <label> Review Year</label>
-            </div>
-          </div>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Confirm</a>
-          </div>
-        </div>
 
         <div class="fixed-action-btn">
         <a class="btn-floating btn-large tamu-navbar modal-trigger" href="#create-review-year">
