--- a/student_review.html
+++ b/student_review.html
@@ -7,7 +7,7 @@
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
-      <link rel="stylesheet" href="css/app.css">
+      <?!= include('css'); ?>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -86,6 +86,6 @@
 
       <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="js/app.js"></script>
+      <?!= include('javascript'); ?>
     </body>
   </html>
