--- a/review_monitor.html
+++ b/review_monitor.html
@@ -2,6 +2,8 @@
   <!DOCTYPE html>
   <html>
     <head>
+      <base target="_top">
+      
       <!--Import SlickGrid Stylesheets-->
       <link rel="stylesheet" href="https://mleibman.github.io/SlickGrid/slick.grid.css" />
       <link rel="stylesheet" href="https://mleibman.github.io/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css" />
@@ -17,7 +19,7 @@
       <!--Let browser know website is optimized for mobile-->
       <!--link rel="stylesheet" href="css/app.css"-->
       
-      <?!= include('css_app'); ?>
+      <?!= include('css'); ?>
       <?!= include('advisor_review_css'); ?>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -30,7 +32,7 @@
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
               <li class="active"><a href="#">Review Monitor</a></li>
-              <li><a href="index.html">Logout</a></li>
+              <li><a href="<?= getScriptUrl();?>?page=index.html">Logout</a></li>
             </ul>
           </div>
         </nav>
@@ -149,7 +151,7 @@
               document.getElementById('year').options.add(optn);
       }
       </script>
-      <?!= include("js_app") ?>
+      <?!= include("javascript") ?>
       <?!= include("advisor_review_js") ?>
     </body>
   </html>
