--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
-      <link rel="stylesheet" href="css/app.css">
+      <?!= include('css'); ?>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -33,7 +33,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="student_info.html">Login as Student</a>
+                  <a href="<?= getScriptUrl();?>?page=student_info.html">Login as Student</a>
                   <a href="<?= getScriptUrl();?>?page=review_monitor.html">Login as Faculty</a>
                 </div>
               </div>
