--- a/student_review.html
+++ b/student_review.html
@@ -2,15 +2,15 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <base target="_top">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
-      <?!= include('css'); ?>
+      <?!= include('css_app'); ?>
       <meta charset="utf-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <base target="_top">
     </head>
 
     <body>
@@ -19,9 +19,9 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li><a href="<?= getScriptUrl();?>?page=student_info.html">Student Information</a></li>
-              <li class="active"><a href="#">Reviews</a></li>
-              <li><a href="<?= getScriptUrl();?>?page=index.html">Logout</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=student_view">Student Information</a></li>
+              <li class="active"><a href="<?= getScriptUrl();?>?v=student_review">Reviews</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
         </nav>
@@ -87,6 +87,6 @@
 
       <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <?!= include('javascript'); ?>
+      <?!= include("js_app") ?>
     </body>
   </html>
