--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
   <!DOCTYPE html>
   <html>
     <head>
+      <base target="_top">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <!--Let browser know website is optimized for mobile-->
-      <?!= include('css_app'); ?>
+      <?!= include('css'); ?>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <base target="_top">
     </head>
 
     <body>
@@ -33,7 +33,8 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="<?= getScriptUrl();?>">Login!</a>
+                  <a href="<?= getScriptUrl();?>?page=student_info.html">Login as Student</a>
+                  <a href="<?= getScriptUrl();?>?page=review_monitor.html">Login as Faculty</a>
                 </div>
               </div>
             </div>
