added gs files and student details functionality

--- a/advisor_review_js.html
+++ b/advisor_review_js.html
@@ -169,7 +169,7 @@ $(function() {
       d["student_report"] = "NA",
       d["improvement_plan"] = "NA",
       d["cv"] = "NA",
-      d["more_student_details"] = "<a href=\"index.html\" style = \" color:blue;\"><u>Details</u></a>",
+      d["more_student_details"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbx591EuL5O3rYAJ3SngN0vTbi3wZQRjCj6BwFCbahvj/dev?page=student_details&uin=123456789><u>Details</u></a>",
       d["add_review"] = "<a href=\"index.html\" style = \" color:blue;\"><u>Add Review</u></a>"
       
       // data can also be populated this way:
