re-integrated login changes, minor bugfixes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                   </p>
                 </div>
                 <div class="card-action">
-                  <a href="<?= getScriptUrl();?>?page=student_info.html">Login as Student</a>
-                  <a href="<?= getScriptUrl();?>?page=review_monitor.html">Login as Faculty</a>
+                  <a href="<?= getScriptUrl();?>">Login!</a>
                 </div>
               </div>
             </div>
