--- a/student_info.html
+++ b/student_info.html
@@ -19,10 +19,9 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li class="active"><a href="#">Student Information</a></li>
-              <script> console.log("hello world"+<?= getScriptUrl(); ?>)</script>
-              <li><a href="<?= getScriptUrl();?>?page=student_review.html">Reviews</a></li>
-              <li><a href="index.html">Logout</a></li>
+              <li class="active"><a href="<?= getScriptUrl();?>?v=student_view">Student Information</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=student_review">Reviews</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
         </nav>
