--- a/review_monitor.html
+++ b/review_monitor.html
@@ -31,14 +31,14 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li class="active"><a href="#">Review Monitor</a></li>
+              <li class="active"><a href="#">Student Search</a></li>
               <li><a href="<?= getScriptUrl();?>?page=index.html">Logout</a></li>
             </ul>
           </div>
         </nav>
       </div>
 
-      <h3> Review Monitor </h3>
+      <h3> Student Search </h3>
 
 
         <div class="row">
@@ -122,13 +122,6 @@
         <div id="myGrid" style="margin-left: 0.5%; margin-top: 10px; width: 99%; height:450px;"></div>
 
 
-        <div class="fixed-action-btn">
-        <a class="btn-floating btn-large tamu-navbar modal-trigger" href="#create-review-year">
-          <i class="large material-icons">mode_edit</i>
-        </a>
-      </div>
-
-
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://mleibman.github.io/SlickGrid/lib/jquery-1.7.min.js"></script>
       <script src="https://mleibman.github.io/SlickGrid/lib/jquery.event.drag-2.2.js"></script>
@@ -138,19 +131,7 @@
       
       <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script>
-      var d = new Date();
-      for(y = d.getFullYear(); y > 1850; y--) {
-              var optn = document.createElement("OPTION");
-              optn.text = y;
-              optn.value = y;
-
-              if (y == d.getFullYear()) {
-                  optn.selected = true;
-              }
-              document.getElementById('year').options.add(optn);
-      }
-      </script>
+      
       <?!= include("javascript") ?>
       <?!= include("advisor_review_js") ?>
     </body>
