corrected routes, navbar links

--- a/advisor_review_js.html
+++ b/advisor_review_js.html
@@ -177,9 +177,9 @@ $(function() {
       d["student_report"] = "NA",
       d["improvement_plan"] = "NA",
       d["cv"] = "NA",
-      d["more_student_details"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbx591EuL5O3rYAJ3SngN0vTbi3wZQRjCj6BwFCbahvj/dev?page=student_details&uin=123456789 style = \" color:blue;\"><u>Details</u></a>",
-      d["all_reviews"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbx591EuL5O3rYAJ3SngN0vTbi3wZQRjCj6BwFCbahvj/dev?page=student_details&uin=123456789 style = \" color:blue;\"><u>Details</u></a>",
-      d["add_review"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbx591EuL5O3rYAJ3SngN0vTbi3wZQRjCj6BwFCbahvj/dev?page=add_review&uin=123456789 style = \" color:blue;\"><u>Add Review</u></a>"
+      d["more_student_details"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbwa1jA6B4L7tpWLx-5Zpdpj9UkcfhpRd0C6zjnOi-r4/dev?v=student_details&uin=123456789 style = \" color:blue;\"><u>Details</u></a>",
+      d["all_reviews"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbwa1jA6B4L7tpWLx-5Zpdpj9UkcfhpRd0C6zjnOi-r4/dev?v=student_details&uin=123456789 style = \" color:blue;\"><u>Details</u></a>",
+      d["add_review"] = "<a href=https://script.google.com/a/tamu.edu/macros/s/AKfycbwa1jA6B4L7tpWLx-5Zpdpj9UkcfhpRd0C6zjnOi-r4/dev?v=add_review&uin=123456789 style = \" color:blue;\"><u>Add Review</u></a>"
       
       // data can also be populated this way:
       /*data[i] = {
