--- a/student_details.html
+++ b/student_details.html
@@ -22,8 +22,8 @@
           <div class="nav-wrapper tamu-navbar">
             <a href="#" class="brand-logo">Ph.D. Review System</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li class="active"><a href="#">Review Monitor</a></li>
-              <li><a href="<?= getScriptUrl();?>?page=index.html">Logout</a></li>
+              <li class="active"><a href="<?= getScriptUrl();?>?v=faculty_view">Review Monitor</a></li>
+              <li><a href="<?= getScriptUrl();?>?v=index">Logout</a></li>
             </ul>
           </div>
         </nav>
@@ -129,7 +129,7 @@
             </form>
           </div>
           <div>
-            <a href="#!">Okay</a>
+            <a href="<?= getScriptUrl();?>?v=review_monitor">Okay</a>
           </div>
         </div>
     
