added form validation

--- a/student_details.html
+++ b/student_details.html
@@ -56,7 +56,7 @@
                   <select id = "start-semester" name="start-semester"  disabled>
                       <option value="" disabled selected>Choose your option</option>
                   </select>
-                  <label for="uin"> Start Semester </label>
+                  <label for="start-semester"> Start Semester </label>
                 </div>
                 <div class="input-field col s2 ">
                   <select id="qual" class="validate"  disabled>
