combined student/faculty view backends

--- a/javascript.html
+++ b/javascript.html
@@ -121,13 +121,13 @@
 
   }
   
-//  function openPDF(){
-//    var cv_url = document.getElementById('cv_url').href;
-//    if (cv_url!="#"){
-//      window.open(pdf);
-//      return false;
-////    }
-//  }
+  function openPDF(){
+    var cv_url = document.getElementById('cv_url').href;
+    if (cv_url!="#"){
+      window.open(pdf);
+      return false;
+    }
+  }
   
   // below from views/js/app.js
   
